--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
       <section id="main_content">
         <h3>Vacant Property<br/>962 Charles Allen Dr, Atlanta Ga 30309</h3>
 
-<p>For the past 5 years, 962 Charles Allen Dr has ben vacant, abandoned, continiously deterioating. The first reported incident of this began in 2012 and has since been reported every year. This property damages other properties around it, allows pests and vermin into the connected homes, and poses a serious saftey risk with glass windows close to falling out of the frames.</p>
+<p>For the past 5 years, 962 Charles Allen Dr has ben vacant, abandoned, continuously deteriorating. The first reported incident of this was in 2012 and it has since been reported nearly every year. This property damages other properties around it, allows pests and vermin into the connected homes, and poses a serious safety risk with glass windows close to falling out of the frames.</p>
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Details</h3>
 
-<p> Each individaul item is documented in the pictures below:
+<p> Each individual item is documented in the pictures below:
   <ol>
     <li>Second story back windows open for several years, frames rotting out</li>
-    <li>Hvac condensor inoperatble for several years</li>
-    <li>Crawl spaces vent open allowing rodents to enter premises</li>
-    <li>Gutters in disrepear and overflowing causing water damage on back of house</li>
+    <li>Hvac condensor inoperable for several years</li>
+    <li>Crawl space vent open allowing rodents to enter premises</li>
+    <li>Gutters in disrepair and overflowing causing water damage on back of house</li>
     <li>Roof in state of disrepair with large holes allowing water to flow freely into structure</li>
-    <li>Debree and junk clutered on the roof</li>
+    <li>Debris and junk cluttered on the roof</li>
     <li>Front sunroom window dangerously close to falling out of frame from water damage</li>
     <li>Front second story window open for several years, frame rotting out</li>
     <li>Front porch overgrown</li>
@@ -50,19 +50,19 @@
   <img src="images/back_second_story.jpg"/><br/>
   <b>First story back window frames rotting out</b>
   <img src="images/back_first_story.jpg"/>
-  <b>Hvac condensor inoperatble for several years, crawl space open and accessible to pests</b>
+  <b>Hvac condensor inoperable for several years, crawl space open and accessible to pests</b>
   <img src="images/back_condensor.jpg"/>
-  Gutters in disrepear and overflowing causing water damage on back of house
+  Gutters in disrepair and overflowing causing water damage on back of house
   <img src="images/gutters.jpg"/>
   Roof in state of disrepair with large holes allowing water to flow freely into structure
   <img src="images/roof.jpg"/>
-  Debree and junk clutered on the roof
+  Debris and junk clutered on the roof
   <img src="images/roof2.jpg"/>
   Front sunroom window dangerously close to falling out of frame from water damage
   <img src="images/glass_pane.jpg"/>
-  Look closley, the water damage and interior leaning against is causing a large glass pane to be very close to failing out
+  Look closely, the water damage and interior leaning against is causing a large glass pane to be very close to failing out
   <img src="images/glass_pane2.jpg"/>
-  That glass pane sits directly above a neighbors front door
+  That glass pane sits directly above a neighbor's front door
   <img src="images/glass_pane3.jpg"/>
   Overgrown front of the house
   <img src="images/front.jpg"/>
